2008-03-17  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: @itemize should produce bullets by
	default (report from Reinhold Kainhofer)
	* texi2html.init: handle @click, @clickstyle, @click, @arrow,
	@clicksequence
	* Tests/formatting/comments.texi,formatting.texi,clean.texi:
	test for @click, @clickstyle, @click, @arrow, @clicksequence

2008-03-12  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init, examples/mediawiki.init: add
	the program_string reference.
	* examples/mediawiki.init: cleanup perl warnings.
	* texi2html.pl: element_file_name called with doc sets docu_doc
	and not docu_top (Reinhold Kainhofer).
	* Tests/test.sh: more robust for files with spaces.
	* Tests/*: add tests for mediawiki output.

2007-10-07  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: better handling of special regions.
	* Tests/*: test for more possibility regarding titlepage output 
	or not with copying output or not.
	Use the actual state for titlepage generation in print_Top.
	rename formatting-regions to formatting_regions.

2007-10-06  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: handle titlepage like other 
	special regions. 
	Don't add the index entries in footnote within special regions.
	* Tests/*: test for footnote in float caption and anchor and index
	in that footnote.
	test for titlepage with most of the constructs within.

2007-10-05  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: separate global variables of pass_structure and
	pass_texi, prefix some of those vaiables, and clean variable and 
	function names.
	add more information relative to the special regions.
	Treat more systematically the special regions with an initialization
	code allowing to fill the state with relevant information.
	Don't output footnote lines for footnotes not part of the document.
	Better id generation for headings in region.
	Better handling of anchors in special regions.